# VibeCoding-SOP

./: .gitignore  README.md  SOP批评核验与重构决议.md  Skill调用组织与双Agent模式SOP.md  需求分析SOP.md  需求分析完整流程.md
.codex/: INSTALL.md
10-requirements/: business_rules_memo.md  superpowers-deep-customization-business_rules_memo.md
15-tech-selection/: superpowers-deep-customization-tech-selection.md  tech-selection.md
20-architecture/: architecture.md  execution-progress.md  repository-restructure-plan.md  superpowers-deep-customization-architecture.md  superpowers-deep-customization-skill-map.md  tasks.md
25-contract/: superpowers-deep-customization-test_contract.md  test_contract.md
Skill调用组织与双Agent模式SOP/: 01-执行架构与角色.md  02-事件驱动交接协议.md  03-对抗审查与门禁.md  05-操作模板与运行清单.md  README.md
orchestrator/: .env.example  .gitignore  CLAUDE_CODE_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements-test.txt
orchestrator/archive/requirements_sop/: 01-阶段与门禁.md  02-证据与上下文工程.md  03-角色协作与裁决.md  04-模板与检查清单.md
orchestrator/archive/skill_call_sop/: 04-I-O托管与产物路由.md
orchestrator/docs/: BLOCKING_ISSUES_FIXED.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_VULNERABILITIES_FIXED.md  CURRENT_STATUS_REPORT.md  EXECUTION_SUMMARY.md  FINAL_VERIFICATION.md  FINAL_VERIFICATION_SUMMARY.md  HARD_ISSUES_FIXED_ROUND3.md  IMPLEMENTATION_SUMMARY.md  MCP_ARCHITECTURE_REFACTORING.md  QUICK_START_GUIDE.md  WORK_COMPLETION_SUMMARY.md
orchestrator/mcp_server/: mcp_server_main.py
orchestrator/mcp_server/adapters/: __init__.py  event_publisher.py  injector_adapter.py  listener_adapter.py  router_adapter.py
orchestrator/mcp_server/tools/: __init__.py  blocking_tools.py  context_tools.py  go_nogo.py  lifecycle_tools.py  registry.py  review_workflow.py  router.py  summary.py
orchestrator/scripts/: bootstrap.sh  run_orchestrator.sh
orchestrator/src/: __init__.py  constants.py  main.py
orchestrator/src/config/: settings.py
orchestrator/src/core/: agent_lifecycle.py  agent_lifecycle_blocking.py  async_listener.py  context_queue.py  event_bus.py  injector.py  listener.py  packager.py  router.py  trimmer.py
orchestrator/src/models/: artifacts.py  events.py  review.py
orchestrator/src/utils/: logger.py  validators.py
orchestrator/tests/: test_full_workflow.py
orchestrator/tests/mcp/: __init__.py  test_adapters.py  test_async_listener.py  test_context_queue.py  test_e2e_isolation.py  test_event_driven_review.py  test_event_publisher.py  test_server.py  test_tools.py
skill/: README.md  test_fixes.py
skill/agent-in-tool/: .env.example  ARCHITECTURE.md  MULTI_AGENT_ARCHITECTURE.md  README.md  SUMMARY.md  cli.py  pyproject.toml  requirements.txt  start.sh
skill/agent-in-tool/10-requirements/: TASK-TEST.md
skill/agent-in-tool/20-planning/: TASK-TEST-requirement_contract-20260412-1752.md  TASK-TEST.md
skill/agent-in-tool/30-build/: TASK-TEST-execution_evidence-20260412-1752.md
skill/agent-in-tool/development_phase_orchestrator/: SKILL.md
skill/agent-in-tool/enforce_tdd/: SKILL.md
skill/agent-in-tool/forge_requirements/: SKILL.md
skill/agent-in-tool/read_task_contract/: SKILL.md
skill/agent-in-tool/requirements_phase_orchestrator/: SKILL.md
skill/agent-in-tool/scripts/: blind_reviewer.py  contract_forger.py  development_orchestrator.py  requirements_orchestrator.py  requirements_subagent_dispatcher.py  runtime.py  sop_orchestrator.py  tdd_enforcer.py
skill/agent-in-tool/submit_to_owner/: SKILL.md
skill/agent-in-tool/trigger_blind_review/: SKILL.md
skill/archive_review_artifact/: SKILL.md
skill/archive_review_artifact/scripts/: __init__.py  archiver.py
skill/execute_structured_review/: SKILL.md
skill/execute_structured_review/scripts/: __init__.py  flaw_detector.py  report_generator.py  (+1 more)
skill/fetch_and_trim_evidence/: SKILL.md
skills/architecture-and-tasking/: SKILL.md
skills/boundary-convergence/: SKILL.md
skills/contract-solidification/: SKILL.md
skills/development-transparency-protocol/: SKILL.md
skills/executing-plans/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
skills/tech-selection/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/using-git-worktrees/: SKILL.md
需求分析SOP/: README.md
(+5 files in other folders)
