[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-in-tool-orchestrator"
version = "1.0.0"
description = "Agent-in-Tool盲审架构 - 真正的敏捷单机开发系统"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.18.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-in-tool = "cli:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
